GPencil: Mirror over first selected marker causing blender crash #74837

Closed
opened 2020-03-17 06:33:45 +01:00 by (Deleted) · 6 comments
(Deleted) commented 2020-03-17 06:33:45 +01:00 (Migrated from localhost:3001)

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Intel(R) UHD Graphics 620 Intel 4.5.0 - Build 23.20.16.4973

Blender Version
Broken: version: 2.83 (sub 9), branch: master (modified), commit date: 2020-03-17 04:17, hash: b87997f59b
Worked: (newest version of Blender that worked as expected)

Short description of error
Mirroring keyframes using 1st selected marker in Grease pencil dope sheet is causing blender crash.

Exact steps for others to reproduce the error

  1. Open 2D Animation Template
  2. create few keyframes.
  3. Create a marker (press M) at any frame
  4. Select all keyframes while the maker is still selected press Ctrl M and choose mirror over first selected marker in context menu
    Last step should lead to blender crash.
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Intel(R) UHD Graphics 620 Intel 4.5.0 - Build 23.20.16.4973 **Blender Version** Broken: version: 2.83 (sub 9), branch: master (modified), commit date: 2020-03-17 04:17, hash: `b87997f59b` Worked: (newest version of Blender that worked as expected) **Short description of error** Mirroring keyframes using 1st selected marker in Grease pencil dope sheet is causing blender crash. **Exact steps for others to reproduce the error** 1. Open 2D Animation Template 2. create few keyframes. 3. Create a marker (press M) at any frame 4. Select all keyframes while the maker is still selected press Ctrl M and choose mirror over first selected marker in context menu Last step should lead to blender crash.
(Deleted) commented 2020-03-17 06:33:45 +01:00 (Migrated from localhost:3001)
Author

Added subscriber: @(Deleted)

Added subscriber: @(Deleted)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.

Not sure these are neccessary in ED_gplayer_mirror_frames?

mirror_gpf_marker(NULL, NULL);

(because then, well.. *scene is NULL obviously...)

1  mirror_gpf_marker         editaction_gpencil.c 621   0x3e8e001 
2  ED_gplayer_mirror_frames  editaction_gpencil.c 662   0x3e8e15e 
3  mirror_action_keys        action_edit.c        1873  0x427a878 
4  actkeys_mirror_exec       action_edit.c        1910  0x427a9db 
5  WM_menu_invoke_ex         wm_operators.c       972   0x3702665 
6  WM_menu_invoke            wm_operators.c       992   0x37027ba 
7  wm_operator_invoke        wm_event_system.c    1267  0x36e3047 
8  wm_operator_call_internal wm_event_system.c    1481  0x36e37e4 
9  WM_operator_name_call_ptr wm_event_system.c    1529  0x36e3a07 
10 ui_apply_but_funcs_after  interface_handlers.c 884   0x41c6865 
11 ui_popup_handler          interface_handlers.c 10820 0x41e0da0 
12 wm_handler_ui_call        wm_event_system.c    617   0x36e1730 
13 wm_handlers_do_intern     wm_event_system.c    2718  0x36e6cca 
14 wm_handlers_do            wm_event_system.c    2829  0x36e70ef 
15 wm_event_do_handlers      wm_event_system.c    3224  0x36e83b6 
16 WM_main                   wm.c                 442   0x36dcb0e 
17 main                      creator.c            522   0x34062b4 
Can confirm. Not sure these are neccessary in `ED_gplayer_mirror_frames`? ``` mirror_gpf_marker(NULL, NULL); ``` (because then, well.. *scene is NULL obviously...) ``` 1 mirror_gpf_marker editaction_gpencil.c 621 0x3e8e001 2 ED_gplayer_mirror_frames editaction_gpencil.c 662 0x3e8e15e 3 mirror_action_keys action_edit.c 1873 0x427a878 4 actkeys_mirror_exec action_edit.c 1910 0x427a9db 5 WM_menu_invoke_ex wm_operators.c 972 0x3702665 6 WM_menu_invoke wm_operators.c 992 0x37027ba 7 wm_operator_invoke wm_event_system.c 1267 0x36e3047 8 wm_operator_call_internal wm_event_system.c 1481 0x36e37e4 9 WM_operator_name_call_ptr wm_event_system.c 1529 0x36e3a07 10 ui_apply_but_funcs_after interface_handlers.c 884 0x41c6865 11 ui_popup_handler interface_handlers.c 10820 0x41e0da0 12 wm_handler_ui_call wm_event_system.c 617 0x36e1730 13 wm_handlers_do_intern wm_event_system.c 2718 0x36e6cca 14 wm_handlers_do wm_event_system.c 2829 0x36e70ef 15 wm_event_do_handlers wm_event_system.c 3224 0x36e83b6 16 WM_main wm.c 442 0x36dcb0e 17 main creator.c 522 0x34062b4 ```
Philipp Oeser self-assigned this 2020-03-17 18:49:24 +01:00
Author

This issue was referenced by 1935cd4027

This issue was referenced by 1935cd4027ac369f19caae12bb027ff794473d8b
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74837
No description provided.